@@ -1,3 +1,8 @@
+2008-07-02  Martin Lambers <marlam@marlam.de>
+
+	* src/view_area.cpp: Clear the color buffer on initialization and on
+	certain errors.
+
 2008-06-25  Martin Lambers <marlam@marlam.de>
 
 	* build-aux/qt4.m4: Search Qt4 libs also in lib64. Reported by Rainer
